--- a/components/modal/modal.css
+++ b/components/modal/modal.css
@@ -341,7 +341,6 @@
 
 @media only screen and (max-width: 410px) {
   .modal-footer .btn {
-    max-width: 130px;
     padding: 11px 0;
   }
 
